@@ -18,11 +18,18 @@ class LegTest {
 
     LocalTime departureTime;
 
+    Intersection i1 = new Intersection(1, 1,1);
+    Intersection i2 = new Intersection(2, 2, 2);
+    Intersection i3 = new Intersection(3, 3,3);
+
+    Segment s12 = new Segment(i1,i2, "Segment 1-2", 1.2);
+    Segment s23 = new Segment(i2,i3, "Segment 2-3", 2.3);
+
 
     @BeforeEach
     void setUp() {
-        intersections = List.of(new Intersection(1, 1, 1), new Intersection(2, 2, 2), new Intersection(3, 3, 3));
-        segments = List.of(new Segment(1, 1, 1, "1", 1), new Segment(2, 2, 2, "2", 2));
+        intersections = List.of(i1,i2,i3);
+        segments = List.of(s12, s23);
         departureTime = LocalTime.of(1, 1, 1);
         leg = new Leg(intersections, segments, departureTime);
     }
@@ -46,8 +53,9 @@ class LegTest {
 
     @Test
     void constructorIntersectionsSegmentsSizeMismatch() {
-        assertThrows(IllegalArgumentException.class, () -> new Leg(List.of(new Intersection(1, 1, 1)), segments, departureTime));
-        assertThrows(IllegalArgumentException.class, () -> new Leg(intersections, List.of(new Segment(1, 1, 1, "1", 1)), departureTime));
+        assertThrows(IllegalArgumentException.class, () -> new Leg(List.of(i1), List.of(s12,s23), departureTime));
+        assertThrows(IllegalArgumentException.class, () -> new Leg(List.of(i1,i2), List.of(s12,s23), departureTime));
+        assertThrows(IllegalArgumentException.class, () -> new Leg(List.of(i1,i2,i3), List.of(s12), departureTime));
     }
 
     @Test
@@ -62,16 +70,46 @@ class LegTest {
 
     @Test
     void getDepartureTime() {
-        assertEquals(departureTime, leg.getDepartureTime());
+        assertEquals(departureTime, leg.departureTime());
     }
 
     @Test
     void getDestination() {
-        assertEquals(intersections.get(intersections.size() - 1), leg.getDestination());
+        assertEquals(intersections.getLast(), leg.getDestination());
     }
 
     @Test
     void getOrigin() {
-        assertEquals(intersections.get(0), leg.getOrigin());
+        assertEquals(intersections.getFirst(), leg.getOrigin());
     }
+
+
+    @Test
+    void equalsSameAttributes() {
+        Leg leg2 = new Leg(intersections, segments, departureTime);
+        assertEquals(leg, leg2);
+    }
+
+    @Test
+    void equalsDifferentDepartureTime() {
+        Leg leg2 = new Leg(intersections, segments, LocalTime.of(1, 1, 2));
+        assertNotEquals(leg, leg2);
+    }
+
+    @Test
+    void equalsDifferentSegments() {
+        Leg leg1 = new Leg(List.of(i1,i2), List.of(s12), departureTime);
+        Leg leg2 = new Leg(List.of(i1,i2), List.of(new Segment(i1,i2, "another name", 1.2)), departureTime);
+
+        assertNotEquals(leg, leg2);
+
+    }
+
+    @Test
+    void equalsDifferentIntersections() {
+        List<Intersection> newIntersections = List.of(new Intersection(1, 343435, 1), new Intersection(2, 2, 2), new Intersection(3, 3, 3));
+        Leg leg2 = new Leg(newIntersections, segments, departureTime);
+        assertNotEquals(leg, leg2);
+    }
+
 }
