@@ -21,7 +21,7 @@ class InMemoryCourierRepositoryTest {
     void create() {
         inMemoryCourierRepository.create("John", "Doe", "johndoe.email.com", "0123456789");
         assertEquals(1, inMemoryCourierRepository.findAll().size());
-        final Courier firstCourier = inMemoryCourierRepository.findAll().get(0);
+        final Courier firstCourier = inMemoryCourierRepository.findAll().getFirst();
         assertEquals("John", firstCourier.getFirstName());
         assertEquals("Doe", firstCourier.getLastName());
         assertEquals("johndoe.email.com", firstCourier.getEmail());
@@ -37,7 +37,6 @@ class InMemoryCourierRepositoryTest {
         assertEquals("Doe", courier.getLastName());
         assertEquals("johndoe.email.com", courier.getEmail());
         assertEquals("0123456789", courier.getPhoneNumber());
-
     }
 
     @Test
@@ -49,6 +48,14 @@ class InMemoryCourierRepositoryTest {
 
     @Test
     void update() {
+        inMemoryCourierRepository.create("John", "Doe", "johndoe.email.com", "0123456789");
+        final Courier courier = inMemoryCourierRepository.findById(1L);
+        assertEquals("John", courier.getFirstName());
+
+        Courier updatedCourier = new Courier(1L, "Jane", "Doe", "johndoe.email.com", "0123456789");
+
+        inMemoryCourierRepository.update(updatedCourier);
+        assertEquals("Jane", inMemoryCourierRepository.findById(1L).getFirstName());
     }
 
     @Test
@@ -57,6 +64,6 @@ class InMemoryCourierRepositoryTest {
         inMemoryCourierRepository.create("Jane", "Doe", "janedoe.email.com", "0123456789");
         inMemoryCourierRepository.deleteById(1L);
         assertEquals(1, inMemoryCourierRepository.findAll().size());
-        assertEquals("Jane", inMemoryCourierRepository.findAll().get(0).getFirstName());
+        assertEquals("Jane", inMemoryCourierRepository.findAll().getFirst().getFirstName());
     }
 }
